changed header color and generalized as @color

--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -24,16 +24,18 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <color name="headerBackgroundColor">#dd4814</color>
+
     <style name="mainHeaderWrapper">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#910101</item>
+        <item name="android:background">@color/headerBackgroundColor</item>
     </style>
 
     <style name="mainHeader">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#910101</item>
+        <item name="android:background">@color/headerBackgroundColor</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:padding">10dp</item>
         <item name="android:textColor">#FFFFFF</item>
