--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -75,6 +75,27 @@
         <item name="android:layout_marginRight">5dp</item>
     </style>
 
+    <style name="wineEditingLine">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
+    <style name="wineEditingLineLeft">
+        <item name="android:layout_marginLeft">5dp</item>
+    </style>
+
+    <style name="wineEditingLineRight">
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
+    <style name="prettyRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/ratingstars</item>
+        <item name="android:minHeight">32dip</item>
+        <item name="android:maxHeight">32dip</item>
+    </style>
+
     <style name="AutoCompleteTextViewLight" parent="@android:style/Widget.AutoCompleteTextView">
         <item name="android:textColor">@android:color/primary_text_light</item>
     </style>
