--- a/res/layout/winelist_item.xml
+++ b/res/layout/winelist_item.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
-        android:src="@drawable/wine_red" />
+        android:src="@drawable/bullet_redwine" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
