added listing_text to wine view

--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -54,6 +54,15 @@
         <item name="android:layout_weight">1</item>
     </style>
 
+    <style name="wineBasicInfo" parent="@android:style/TextAppearance.Small">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
     <style name="wineViewLabel" parent="@android:style/TextAppearance.Small">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
