--- a/res/layout/viewwine.xml
+++ b/res/layout/viewwine.xml
@@ -32,50 +32,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <LinearLayout
+            <TextView
                 android:id="@+id/basic_info"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/wine_type"
-                    style="@style/wineViewValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/year"
-                    style="@style/wineViewValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/flag"
-                    style="@style/wineViewValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/label_region"
-                style="@style/wineViewLabel"
-                android:text="@string/label_region" />
-
-            <TextView
-                android:id="@+id/region"
-                style="@style/wineViewValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/label_grapes"
-                style="@style/wineViewLabel"
-                android:text="@string/label_grapes" />
-
-            <TextView
-                android:id="@+id/grapes"
-                style="@style/wineViewValue"
+                style="@style/wineBasicInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
