--- a/winenotes/res/layout/editimpressions.xml
+++ b/winenotes/res/layout/editimpressions.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:orientation="vertical">
+              style="@style/dialogContent">
 
     <RelativeLayout
             android:layout_width="fill_parent"
@@ -11,7 +9,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:paddingTop="0dp">
+            android:paddingTop="5dp">
 
         <Button
                 android:id="@+id/btn_done"
@@ -39,7 +37,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingBottom="10dp"
+            android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="0dp"
