--- a/winenotes/res/layout/editwine.xml
+++ b/winenotes/res/layout/editwine.xml
@@ -126,7 +126,8 @@
 
                 <EditText
                     android:id="@+id/price"
-                    android:ems="4"
+                    android:minEms="3"
+                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@+id/currency"
