--- a/winenotes/res/layout/viewwine.xml
+++ b/winenotes/res/layout/viewwine.xml
@@ -22,7 +22,7 @@
                 android:id="@id/btn_edit"
                 style="@style/mainHeaderButton"
                 android:layout_alignParentRight="true"
-                android:contentDescription="@string/btn_contentDescription"
+                android:contentDescription="@string/alt_edit"
                 android:src="@drawable/headerbtn_edit"/>
     </RelativeLayout>
 
