--- a/winenotes/res/layout/editwine.xml
+++ b/winenotes/res/layout/editwine.xml
@@ -325,7 +325,7 @@
                 android:id="@+id/photos"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"/>
 
             <Button
                 android:id="@+id/btn_save2"
