--- a/winenotes/res/menu/main.xml
+++ b/winenotes/res/menu/main.xml
@@ -3,10 +3,12 @@
 
     <item
             android:id="@+id/menu_backup"
+            android:icon="@drawable/menu_backup"
             android:title="@string/menu_backup"/>
 
     <item
             android:id="@+id/menu_restore"
+            android:icon="@drawable/menu_restore"
             android:title="@string/menu_restore"/>
 
 </menu>
