--- a/winenotes/res/values/styles.xml
+++ b/winenotes/res/values/styles.xml
@@ -47,7 +47,10 @@
     </style>
 
     <style name="mainHeaderButton" parent="customButton">
-        <item name="android:layout_margin">5dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
     </style>
 
     <style name="mainHeaderElement" parent="mainHeader">
