--- a/winenotes/res/layout/editwine.xml
+++ b/winenotes/res/layout/editwine.xml
@@ -59,7 +59,7 @@
                     android:id="@+id/wine_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:prompt="@string/prompt_wine_type" />
+                    android:prompt="@string/prompt_drink_type" />
 
                 <Spinner
                     android:id="@+id/year"
